small adjustments, menu fixes on mobile.

--- a/less/front-page.less
+++ b/less/front-page.less
@@ -866,7 +866,11 @@
                   }//:before
               }//.Rtable-cell
           }//.Rtable
-      }//@tablet
+      }//@mobile
+
+      @media @mobile {
+        .Rtable .Rtable-cell { padding-left: 60px; padding-right: 20px; }
+      }
   }//#h-menu
 
 
